Configure dynamic wildcard CORS matching to fix Vercel deploy errors